# Unicoda

./: .gitignore  Auralis计划书.md  COPYING  README.md  Unicoda 计划书.md  Unison计划书.md  build-output.txt  build_log.txt  capacitor.config.ts  index.html  package-lock.json  package.json  temp_b64.txt  vite.config.ts
android/app/: build.gradle
android/app/src/main/java/com/unicoda/mobile/: MainActivity.java
android/app/src/main/res/values/: strings.xml
fonts/: LICENSE.md
scripts/: add_retrieval_type.py  analyze_sysprompt.py  compress_modguide.py  compress_remaining.py  embed-fonts.js  fix_backticks.py  gen-ico.js  generate-icons.js
src/: App.tsx  fonts.css  i18n.ts  main.tsx  styles.css  types.ts  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Unison.html
src-tauri/src/: lib.rs  main.rs
src-tauri/src/unicodaplus/: mod.rs  server.rs
src/components/: AnimatedSection.tsx  AuroraBackground.tsx  AuroraLogo.tsx  ChatPanel.tsx  ComponentsPanel.tsx  ConfirmDialog.tsx  FilePreviewPanel.tsx  InputBar.tsx  LockOverlay.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  ModulesPanel.tsx  PrintDialog.tsx  SecurityBubble.tsx  SettingsPanel.tsx  Sidebar.tsx  TitleBar.tsx  YoloChatPanel.tsx  YoloPanel.tsx  YoloXMemory.tsx
src/constants/: windowIcons.tsx
src/contexts/: LockContext.tsx  ModelContext.tsx  SearchContext.tsx  SecurityContext.tsx  ThemeContext.tsx  XMemoryContext.tsx
src/hooks/: useChatStream.ts  useXMemory.ts
src/modules/: moduleImports.ts  registry.ts  types.ts
src/modules/builtins/: checkApiBalance.ts  editFile.ts  executeCommand.ts  fetchPage.ts  getCurrentTime.ts  getPlusStatus.ts  getProjectReview.ts  getUnicodaStatus.ts  getWorkspaceInfo.ts  lintCode.ts  openPermissionDialog.ts  readFromFiles.ts  runCodeSandbox.ts  searchFile.ts  searchInProject.ts  summaryPage.ts  systemMessageFlow.ts  virtualParameterCalibration.ts  webSearch.ts  writeToFile.ts  xmemoryGranule.ts
src/services/: agentEngine.ts  commandSystem.ts  conversationCompression.ts  conversationStorage.ts  knowledgeBase.ts  modelApi.ts  taskPlanner.ts  xmemory.ts
src/utils/: configStorage.ts  crypto.ts  fileParser.ts  notificationSound.ts
