[package]
name = "unison"
version = "0.1.0"
description = "Unison - AI Programming Agent"
authors = ["Unison Team"]
edition = "2021"

[lib]
name = "unison_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "unison"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "dpapi",
    "wincrypt",
    "wincred",
    "winbase",
    "ntdef",
    "errhandlingapi",
] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
