[package]
name = "unicoda"
version = "0.1.0"
description = "Unicoda - AI Programming Agent"
authors = ["Unicoda Team"]
edition = "2021"

[lib]
name = "unicoda_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "unicoda"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "dpapi",
    "wincrypt",
    "wincred",
    "winbase",
    "ntdef",
    "errhandlingapi",
] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli"] }
tokio = { version = "1", features = ["time", "process"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
